src/test/deca/context/invalid/if_minus_int.deca
/*
    Description : Utilisation d'un minus int au sein d'un if

    Résultat: Erreur contextuelle (deca:8:8)
*/
{
    int x;
    if (-2){
        x = 2;
    }
}
